# Engine

./: .gitignore  CMakeLists.txt  Utils.cpp  engine_config.ini  glad.c  imgui.ini  installer.nsi  main.cpp  package.bat
SHADERS/: axis.vert  boundingbox.frag  boundingbox.vert  fragmentShader.frag  gizmo.frag  gizmo.vert  outline.frag  outline.vert  vertexShader.vert
include/: Application.h  Input.h  Logger.h  ProjectLauncher.h  Renderer.h  Shader.h  UiManger.h  Utiles.h  Window.h  desktop.ini  imgui_impl_opengl3.h  main.hpp
include/Core/: ConfigManager.h  SystemInfo.h  WindowManager.h
include/Scene/: Gizmo.h  Light.h  Material.h  Mesh.h  MeshFactory.h  Scene.h  SceneObject.h
include/glad/: glad.h
src/Core/: Application.cpp  ConfigManager.cpp  Input.cpp  Logger.cpp  ProjectLauncher.cpp  SystemInfo.cpp  UiManger.cpp  Window.cpp  WindowManager.cpp
src/Renderer/: Renderer.cpp  Shader.cpp
src/Renderer/Scene/: Light.cpp  Material.cpp  Mesh.cpp  MeshFactory.cpp  Scene.cpp
src/Scene/: Gizmo.cpp  Scene.cpp
